<resources>
    <string name="app_name">SignGateway</string>
    <string name="create_new_account">Create a new account</string>
    <string name="sign_up_text">Sing Up</string>
    <string name="sing_up_instruction">It\'s quick and easy</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="password">Passwrord</string>
    <string name="email_or_number">Mobile Number or email address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="log_in">Log In</string>
    <string name="logged_on">Logged On Successfully</string>
    <string name="sign_up_finalize_btn">Sign Up</string>
</resources>